--- a/projects/desktop-app/index.html
+++ b/projects/desktop-app/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="root" style="height: 100%;"></div>
-    <script type="module" src="/ui/index.tsx"></script>
+    <script type="module" src="/src/ui-src/index.tsx"></script>
   </body>
 </html>
