--- a/projects/desktop-app/index.html
+++ b/projects/desktop-app/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <title>Bitsky</title>
+    <title>SeekBot - Make Life Productivity</title>
   </head>
   <body>
     <div id="root" style="height: 100%;"></div>
