--- a/projects/desktop-app/index.html
+++ b/projects/desktop-app/index.html
@@ -8,7 +8,7 @@
     <title>SeekBot - Make Life Productivity</title>
   </head>
   <body>
-    <div id="root" style="height: 100%;"></div>
+    <div id="root"></div>
     <script type="module" src="/src/ui-src/index.tsx"></script>
   </body>
 </html>
